RESOLVED FIXED 241847
[css-conditional] @supports selector fails for ::placeholder & ::file-selector-button
https://bugs.webkit.org/show_bug.cgi?id=241847
Summary [css-conditional] @supports selector fails for ::placeholder & ::file-selecto...
Jan Nicklas
Reported 2022-06-22 02:06:49 PDT
Created attachment 460411 [details] Reproduction Example The `@supports selector ()` fails for shadow DOM pseudo element tests. An example for supported shadow DOM pseudo element styling is `input::placeholder { color: orchid }`. Therefore the expected behaviour would be that `@supports selector(input::placeholder) {` matches. Furthermore the expected behaviour would also be that `@supports not selector(input::placeholder) {` does NOT match. Instead the current behaviour is that `@supports selector(input::placeholder) {` does NOT match. In addition the current behaviour is also that `@supports not selector(input::placeholder) {` does match. This behaviour can be reproduced on different Safari versions: - iOS 15.5 Safari - MacOS Safari Version 15.5 (17613.2.7.1.8) - MacOS Safari Technology Preview Release 146 (Safari 15.4, WebKit 17614.1.14.10.6) Current Firefox and Chrome versions behave correctly. Please see the attached reproduction example.
Attachments
Reproduction Example (471 bytes, text/html)
2022-06-22 02:06 PDT, Jan Nicklas
no flags
Radar WebKit Bug Importer
Comment 1 2022-06-22 05:33:44 PDT
Ryosuke Niwa
Comment 2 2022-06-22 22:16:50 PDT
Oh, this is nothing to do with Shadow DOM.
Tim Nguyen (:ntim)
Comment 3 2022-10-12 17:22:56 PDT
Tim Nguyen (:ntim)
Comment 4 2023-03-29 19:31:46 PDT
*** Bug 254682 has been marked as a duplicate of this bug. ***
Tim Nguyen (:ntim)
Comment 5 2023-04-24 12:02:09 PDT
Joonghun, any update on this?
Joonghun Park
Comment 6 2023-05-15 09:18:26 PDT
(In reply to Tim Nguyen (:ntim) from comment #5) > Joonghun, any update on this? I'm sorry for the delay. I made a patch and uploaded it to https://github.com/WebKit/WebKit/pull/13879. Please refer to it.
EWS
Comment 7 2023-05-15 16:49:03 PDT
Committed 264090@main (61a3212d56ea): <https://commits.webkit.org/264090@main> Reviewed commits have been landed. Closing PR #13879 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.