Fix the bug that @supports selector() fails for all -webkit- pseudo elements. https://bugs.webkit.org/show_bug.cgi?id=241847

Reviewed by Tim Nguyen.

According to the spec, https://drafts.csswg.org/css-conditional-4/#support-definition-ext,
@supports selector() should fail only for *unknown* -webkit- pseudo elements,
not all -webkit- pseudo elements.

Because CSSSelector::parsePseudoElementType treats all -webkit- pseudo elements as valid
as described in https://drafts.csswg.org/selectors-4/#compat,
this patch uses WebCore::parsePseudoElementString to identify unknown -webkit- pseudo elements.

* LayoutTests/TestExpectations:
* Source/WebCore/css/parser/CSSSelectorParser.cpp:
(WebCore::CSSSelectorParser::containsUnknownWebKitPseudoElements):

Canonical link: https://commits.webkit.org/264090@main